# encode-escape

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1673555747182.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lib-app/: Cargo.toml
src-tauri/lib-app/src/: data.rs  lib_app.rs
src-tauri/lib-encode/: Cargo.toml
src-tauri/lib-encode/src/: base64.rs  constants.rs  html.rs  lib_encode.rs  text.rs  text_character.rs  text_utf8.rs  url.rs  url_address.rs
src-tauri/lib-shared/: Cargo.toml
src-tauri/lib-shared-app/: Cargo.toml
src-tauri/lib-shared-app/src/: lib_app.rs
src-tauri/lib-shared/src/: _error.rs  _error_thiserror.rs  data.rs  environment.rs  error.rs  files.rs  lib_shared.rs  numbers.rs  os.rs  prelude.rs  settings.rs  strings.rs  types.rs  validate.rs
src-tauri/src/: cli.rs  constants.rs  controller.rs  encoding.rs  log.rs  main.rs  prelude.rs  types.rs
src-tauri/src/app/: constants.rs
src-tauri/src/configure/: configure.rs  configure_app_settings.rs  configure_runtime_settings.rs  mod.rs
src-tauri/src/controller/: cli.rs  events.rs  frontend.rs  mod.rs  utils.rs
src-tauri/src/convert/: into_display.rs  into_error.rs  mod.rs
src-tauri/src/data/: app.rs  app_info.rs  build.rs  encoding_data.rs  mod.rs  runtime.rs
src-tauri/src/encoding/: data.rs  types.rs
src-tauri/src/settings/: defaults.rs  mod.rs  utils.rs
src-tauri/src/start/: cli.rs  main.rs  mod.rs  tauri.rs
src-tauri/src/system/: mod.rs
src-tauri/src/types/: encoding.rs  mod.rs  operation.rs
(+105 files in other folders)
