[package]
name = "encode-escape"
version = "1.0.11"
description = "A developer tool to quickly encode or escape values."
authors = ["ThinkGo, LLC"]
license = "Copyright © 2023 ThinkGo LLC"
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
clap = {version = "3", features = ["derive"] }
colored = "2.0.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "2.1.2"
tauri = { version = "1.2", features = ["api-all"] }

shared = { path = "lib-shared" }
shared_app = { path = "lib-shared-app" }
encode = { path = "lib-encode" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
